efls-console/manifests/console-host.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      name: mysql
      labels:
        app: mysql
    spec:
      containers:
        - name: main
          image: mysql:8
          ports:
            - name: mysql
              containerPort: 3306
          readinessProbe:
            exec:
              command: [ "mysql", "-uroot", "-pAli-fl", "-e", "SELECT 1" ]
            initialDelaySeconds: 5
            timeoutSeconds: 2
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: apps/v1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: minio-local-deployment
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: minio
    spec:
      # Refer to the PVC created earlier
      volumes:
      - name: storage
        persistentVolumeClaim:
          # Name of the PVC created earlier
          claimName: minio-pvc-local
      containers:
      - name: minio
        # Pulls the default MinIO image from Docker Hub
        image: minio/minio
        args:
        - server
        - /storage
        ports:
        - containerPort: 9000
        # Mount the volume into the pod
        volumeMounts:
        - name: storage # must match the volume name, above
          mountPath: "/storage"
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: minio
---
apiVersion: v1
kind: Service
metadata:
  name: alifl-console-host
  labels:
    app: alifl-console-host
spec:
  selector:
    app: alifl-console-host
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alifl-console-host
  labels:
    app: alifl-console-host
spec:
  selector:
    matchLabels:
      app: alifl-console-host
  template:
    metadata:
      name: alifl-console-host
      labels:
        app: alifl-console-host
    spec:
      volumes:
        - name: nas-pv-storage
          persistentVolumeClaim:
            claimName: nas-pvc
      containers:
        - name: main
          image: registry.cn-hangzhou.aliyuncs.com/fedlearn/console-host:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            timeoutSeconds: 30
          volumeMounts:
            - name: nas-pv-storage
              mountPath: /data
      imagePullSecrets:
        - name: ali-docker-secret
      nodeSelector:
        kubernetes.io/os: linux
