efls-console/manifests/ingress-aliyun.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: "/"
    kubernetes.io/ingress.class: "nginx"
  name: alifl-console-host-ing
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: alifl-console-host
            port:
              number: 5000
        path: /host
        pathType: Prefix
      - backend:
          service:
            name: alifl-console-peer
            port:
              number: 5001
        path: /peer
        pathType: Prefix
